Update 'y7izlo2up-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:cdabf00300250e63a86aaa42f504066f145b9120@sha256:c582317cc2b2369fde7f631725982479d6b6977646a3a03bfdc9851f15713ba8

--- a/components/y7izlo2up-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/y7izlo2up-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: y7izlo2up-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:cdabf00300250e63a86aaa42f504066f145b9120@sha256:c582317cc2b2369fde7f631725982479d6b6977646a3a03bfdc9851f15713ba8
+          name: container-image
